# Ex4

./: .gitignore  CMakeLists.txt  README.md  algorithms.hpp  client_operations.cpp  client_operations.hpp  details.txt  exceptions.cpp  exceptions.hpp  main.cpp  server.cpp  server.hpp  solver_tasks.cpp  solver_tasks.hpp
matrix/: ClassMatrix.cpp  ClassMatrix.hpp  MatrixExceptions.cpp  matrix2.txt
src/: CMakeLists.txt  client_operations.cpp  client_operations.hpp  exceptions.hpp  main.cpp  server.hpp  solver_tasks.cpp
src/matrix/: ClassMatrix.cpp  matrix2.txt
